argocd/istio-demo/zipkin/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: microservice-app-example
    version: v1
  name: zipkin
spec:
  ports:
  - port: 9411
  selector:
    service: zipkin
