argocd/istio-demo/zipkin/istio-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: zipkin
spec:
  host: zipkin
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: zipkin
spec:
  hosts:
    - zipkin
  http:
    - route:
        - destination:
            host: zipkin
            subset: v1
